[package]
name = "pallet-encointer-balances"
version = "0.1.0"
authors = ["encointer.org <alain@encointer.org> and Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
num-traits = { version = "0.2.8", default-features = false }
impl-trait-for-tuples = "0.1.3"

[dependencies.encointer-currencies]
default-features = false
git = "https://github.com/encointer/pallet-encointer-currencies"
package = "pallet-encointer-currencies"

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[dependencies.rstd]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-std"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

#[dependencies.generic-asset]
#default-features = false
#git = "https://github.com/paritytech/substrate"
#package = "pallet-generic-asset"
#rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.sr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "palette-support"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "palette-system"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.substrate-keyring]
optional = true
git = "https://github.com/paritytech/substrate"
package = "substrate-keyring"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.runtime-io]
git = "https://github.com/paritytech/substrate"
package = "sr-io"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.transaction-payment]
git = "https://github.com/paritytech/substrate"
package = "pallet-transaction-payment"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.runtime-interface]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-runtime-interface"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"codec/std",
	"rstd/std",
	"support/std",
	"sr-primitives/std",
	"system/std",
	"encointer-currencies/std",
]
